<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="alisha.zaveri.ShippingAddressActivity">

    <include layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/pizza_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_address"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_pizza"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_height="1.5dp"
                android:layout_width="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/view_line"/>

            <!--Name-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text_pizza"
                android:layout_marginBottom="3dp"
                android:id="@+id/textView" />

            <EditText
                android:id="@+id/name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/name_hint"
                android:background="@color/spinner_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textSize="15sp"
                android:gravity="start"
                android:maxLength="50"
                android:ellipsize="end"
                android:maxLines="1"/>

            <!--Delivery Address-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text_pizza"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/address"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/address_hint"
                android:background="@color/spinner_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textSize="15sp"
                android:gravity="start"
                android:maxLength="100"
                android:inputType="textFilter|textMultiLine|textCapSentences"/>

            <!--Contact Number-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text_pizza"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/contact_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/contact_number_hint"
                android:background="@color/spinner_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textSize="15sp"
                android:gravity="start"
                android:maxLength="10"
                android:inputType="number"/>

            <!--Credit Card-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/text_pizza"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/credit_card"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/credit_card_hint"
                android:background="@color/spinner_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textSize="15sp"
                android:gravity="start"
                android:maxLength="14"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_finalize_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finalize_order"
                    android:gravity="center"
                    android:textColor="@color/spinner_background"
                    android:background="@color/text_pizza"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.5"/>

                <Button
                    android:id="@+id/btn_cancel_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_order"
                    android:gravity="center"
                    android:textColor="@color/spinner_background"
                    android:background="@color/text_pizza"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>